ACS-5506 PMD fixes